--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
+    "nodemon": "^1.19.1",
     "pusher": "^2.2.2",
     "pusher-js": "^5.0.0",
     "react": "^16.9.0",
@@ -36,5 +37,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:4242",
+  "main": "server.js"
 }
